# OOP-2

./: .gitignore  CMakeLists.txt  ReadMe.md  build.sh  debug.cpp  machine_entry.csv  test1.csv  test2.csv  users.csv
modules/: CMakeLists.txt
modules/BigInteger/: BigInteger.cpp  CMakeLists.txt
modules/BigInteger/include/: BigInteger.h
modules/BigInteger/src/: Arythmetic.cpp  BigInteger.cpp  Logic.cpp  Utilities.cpp
modules/CSVParser/: CMakeLists.txt
modules/CSVParser/include/: CSVParser.h  Parser.h
modules/CSVParser/src/: CSVParser.cpp  Parser.cpp
modules/KeyValueContainer/: CMakeLists.txt  KVC.h  KVE.h  KeyValueContainer.cpp  KeyValueContainer.h
modules/Logger/: CMakeLists.txt
modules/Stack/: CMakeLists.txt  Stack.h  StackElement.h
tasks/: CMakeLists.txt
tasks/CalculatingMachine/: CMakeLists.txt  main.cpp
tasks/CalculatingMachine/CalcMachine/: CMakeLists.txt  CalcCommandFactory.h  CalcCommands.h  CalcMachine.h  CalcStrategies.h  CalcStrategyFactory.h
tasks/RegisterAndLogin/: CMakeLists.txt  login.cpp  register.cpp
tasks/RegisterAndLogin/CSVDataBase/: CMakeLists.txt
tasks/RegisterAndLogin/CSVDataBase/include/: Database.h  UserDatabase.h
tasks/RegisterAndLogin/CSVDataBase/src/: UserDataBase.cpp
tasks/RegisterAndLogin/StrelovParser/: CMakeLists.txt
tasks/RegisterAndLogin/StrelovParser/include/: StrelovParser.h  StrelovParserAdapter.h
tasks/RegisterAndLogin/StrelovParser/src/: StrelovParser.cpp  StrelovParserAdapter.cpp
tests/: BigIntegerTests.cpp  CMakeLists.txt  KVCTests.cpp  ParserTests.cpp  StackTests.cpp
(+27 files in other folders)
